k8s/manifests-fdf2e5/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-fdf2e5
  namespace: journee
  labels:
    app: journee-fdf2e5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-fdf2e5
  template:
    metadata:
      labels:
        app: journee-fdf2e5
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-fdf2e5
          image: gcr.io/my-docker-471807/journee:v6.0.0
          ports:
            - containerPort: 3000
