k8s/manifests-fdf2e5/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-fdf2e5
  namespace: journee
spec:
  selector:
    app: journee-fdf2e5
  ports:
    - port: 80
      targetPort: 3000
